clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
      cert-manager.io/cluster-issuer: wethecommon-prod-cert
      cert-manager.io/private-key-rotation-policy: Always
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd
      traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: longhorn.${BASE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
    - hosts:
      - longhorn.${BASE_DOMAIN}
      secretName: cluster-cert
